--- a/public/index.html
+++ b/public/index.html
@@ -177,41 +177,42 @@ function generateBarcode() {
 
   updateDateAndWeek();
 
-  async function getFinalBarcodesFromServer(count) {
-    const combinedParts = [];
-    let modeCode = null;
-    for (const wrapper of fieldsContainer.children) {
-      const selectType = wrapper.querySelector("select:first-child");
-      const valueInput = wrapper.querySelector("input, select.mode-select");
-      if (!selectType || !valueInput) continue;
-      if (selectType.value === "shift") {
-        modeCode = valueInput.value === "모드 A" ? "0" : "5";
-      } else if (selectType.value === "serial") {
-        continue;
-      } else {
-        combinedParts.push(valueInput.value.trim());
-      }
+ async function getFinalBarcodesFromServer(count) {
+  const combinedParts = [];
+  let modeCode = null;
+  for (const wrapper of fieldsContainer.children) {
+    const selectType = wrapper.querySelector("select:first-child");
+    const valueInput = wrapper.querySelector("input, select.mode-select");
+    if (!selectType || !valueInput) continue;
+
+    if (selectType.value === "shift") {
+      modeCode = valueInput.value === "모드 A" ? "0" : "5";
+    } else if (selectType.value === "serial") {
+      continue;
+    } else {
+      combinedParts.push(valueInput.value.trim());
     }
-    for (let i = combinedParts.length - 1; i >= 0; i--) {
-      if (modeCode !== null && /^\d+$/.test(combinedParts[i])) {
-        combinedParts[i] += modeCode;
-        break;
-      }
-      if (modeCode !== null && /\d{2}$/.test(combinedParts[i])) {
-        combinedParts[i] = combinedParts[i].replace(/(\d{2})$/, `$1${modeCode}`);
-        break;
-      }
-    }
-    const finalPrefix = combinedParts.join("");
-    const response = await fetch("https://fksecurity.onrender.com/next-barcode", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prefix: finalPrefix, count })
-    });
-    if (!response.ok) throw new Error("❌ 서버 오류");
-    const data = await response.json();
-    return data.barcodes;
   }
+
+  if (modeCode !== null) {
+    const weekNumber = getCompanyWeekNumber(new Date());
+    combinedParts.push(`${weekNumber}${modeCode}`); // 주차+주야코드 별도 추가
+  }
+
+  // 하이픈(-) 포함해서 조합
+  const finalPrefix = combinedParts.join("-");
+
+  const response = await fetch("https://fksecurity.onrender.com/next-barcode", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ prefix: finalPrefix, count })
+  });
+
+  if (!response.ok) throw new Error("❌ 서버 오류");
+  const data = await response.json();
+  return data.barcodes;
+}
+
 
  // ✅ handlePrint에서 설정값 반영
 async function handlePrint(type) {
