--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,10 @@
       <button id="applySettingsBtn" class="px-4 py-2 bg-green-600 text-white rounded">💾 적용하기</button>
     </div>
   </div>
+  <div class="mt-16 text-center text-red-600 font-semibold text-lg">
+  ⚠️ <span class="text-black">죄송합니다.</span> 업데이트 중 중요한 파일이 날아가서<br/>
+  <span class="text-blue-700 font-bold">금주 모드A/B는 2부터, 7부터 시작합니다.</span> 🙏
+</div>
 </div>
 
 <script>
